# deepcleanv2

./: .flake8  .gitignore  .gitmodules  .luigi.cfg.un~  .pre-commit-config.yaml  .run_train.sh.un~  README.md  conda-lock.yml  dc-demo.conda-lock.yml  dc-demo.yaml  environment_setup.md  export_vars.sh  law.cfg  luigi.cfg  luigi.cfg~  my-first-run_L1.out  pyproject.toml  run_train.sh  test_train_K1.out  test_train_K1_2.1.out  test_train_K1_2.2.out  test_train_K1_2.out  train.sh
data_replay/get_data/: chanslist.txt
data_replay/get_lldata/: chanslist_O3.txt  chanslist_O4.txt  get_data.py  get_data.sh
data_replay/make_lldata/: make_lldata.py  make_lldata.sh
data_replay/replay/: replay_H1.out  start_replay.sh
deepclean/: base.py  config.py
deepclean/couplings/: __init__.py  sub_104Hz.py  sub_60Hz.py  sub_60Hz_O3_MDC.py  sub_60Hz_origin.py
deepclean/tasks/: __init__.py  data.py  train.py
myprojects/: README.md
myprojects/60Hz-O3-MDC/: check.ipynb  config.yaml  config_clean.yaml  logs.txt  run-clean.sh  run-train.sh
myprojects/60Hz-O3-MDC/outdir/cleaned_frames/: H-H1_llhoft-1250921168-1.gwf  H-H1_llhoft-1250921169-1.gwf  H-H1_llhoft-1250921170-1.gwf  H-H1_llhoft-1250921171-1.gwf  H-H1_llhoft-1250921172-1.gwf  H-H1_llhoft-1250921173-1.gwf  H-H1_llhoft-1250921174-1.gwf  H-H1_llhoft-1250921175-1.gwf  H-H1_llhoft-1250921176-1.gwf  H-H1_llhoft-1250921177-1.gwf  H-H1_llhoft-1250921178-1.gwf  H-H1_llhoft-1250921179-1.gwf  H-H1_llhoft-1250921180-1.gwf  H-H1_llhoft-1250921181-1.gwf  H-H1_llhoft-1250921182-1.gwf  H-H1_llhoft-1250921183-1.gwf  H-H1_llhoft-1250921184-1.gwf  H-H1_llhoft-1250921185-1.gwf  H-H1_llhoft-1250921186-1.gwf  H-H1_llhoft-1250921187-1.gwf  H-H1_llhoft-1250921188-1.gwf  H-H1_llhoft-1250921189-1.gwf  H-H1_llhoft-1250921190-1.gwf  H-H1_llhoft-1250921191-1.gwf  H-H1_llhoft-1250921192-1.gwf  H-H1_llhoft-1250921193-1.gwf  H-H1_llhoft-1250921194-1.gwf  H-H1_llhoft-1250921195-1.gwf  H-H1_llhoft-1250921196-1.gwf  H-H1_llhoft-1250921197-1.gwf  H-H1_llhoft-1250921198-1.gwf  (+69 more)
projects/clean/: README.md  apptainer.def  compare.ipynb  config.yaml  config_clean.yaml  online-clean.ipynb  pyproject.toml  resample.ipynb  run-clean.sh  scratch.py  try_clean.py
projects/clean/clean/: __main__.py  cli.py  data.py  frames.py  frames_alt.py  infer.py  model.py
projects/data/: pyproject.toml
projects/data/data/: cli.py
projects/plot/: README.md  config.yaml  make_plots.py  pyproject.toml  run_plot.sh
projects/plot/plot/: __init__.py  __main__.py  cli.py  plot.py
projects/test/: README.md  apptainer.def  config-test.yaml  config.yaml  pyproject.toml  run-train.py  run_train_projects.sh  test-run.out  try_train.ipynb  try_train.py
projects/test/train/: callbacks.py  cli.py  data.py  metrics.py  model.py
projects/train/: .nfs000000000008c18400000c82  README.md  apptainer.def  config-O3.yaml  config-test.yaml  config.yaml  config_projects.yaml  pyproject.toml  run-train.py  set_env.sh  test-train.ipynb  training.py
projects/train/train/: callbacks.py  cli.py  data.py  metrics.py  model.py  plotting.py
projects/utils/utils/: filt.py
(+1 files in other folders)
