[tool.poetry]
name = "plot"
version = "0.1.0"
description = "For plotting ASD ratios in a running manner"
authors = ["Muhammed Saleem <muhammed.saleem@ligo.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# Keep the same versions as used in other modules for consistency
numpy = "^1.23.5"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
