[tool.poetry]
name = "train"
description = "Train DeepClean using Lightning"
version = "0.0.1"
authors = ["Alec Gunny"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

# torch libs
torchmetrics = "^1"
torchaudio = {version = "2.0.2", source = "torch"}

# lightning dependencies
lightning = "^2.0"
wandb = "^0.15"
jsonargparse = {version = "^4.17", extras = ["signatures"]}

# local dependencies
ml4gw = {path = "../../toolbox/ml4gw", develop = true}
utils = {path = "../utils", develop = true}

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
